fix:pagemain mobil layout issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -132,12 +132,9 @@ body {
     align-items: flex-start;
     justify-content: flex-end;
     .image-main {
-      min-width: 700px;
-      height: 450px;
       img {
-        width: 100%;
-        height: 100%;
-        object-fit:contain;
+        width: 700px;
+        height: 450px;
       }
     }
     .text-main {
@@ -540,14 +537,12 @@ body {
       padding: 30px 30px;
       width: 100%;
       margin: 0;
-      align-items: flex-start;
+      align-items: flex-end;
       justify-content: flex-end;
       .image-main {
-        min-width: 700px;
         img {
-          width: 100%;
-          height: 100%;
-          object-fit: contain;
+          width: 700px;
+          height: 450px;
         }
       }
       .text-main {
